修改提示语

--- a/template/custom1/notice.ejs
+++ b/template/custom1/notice.ejs
@@ -30,7 +30,7 @@
       -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.18);">
       <header style="overflow: hidden;">
-        <img style="width:100%;z-index: 666;" src="https://ae01.alicdn.com/kf/U5bb04af32be544c4b41206d9a42fcacfd.jpg" />
+        <img style="width:100%;z-index: 666;" src="https://cdn.jsdelivr.net/gh/ghl1024/CDN/img/yhy.jpg" />
       </header>
       <div style="padding: 5px 20px;">
         <p style="position: relative;
@@ -46,13 +46,13 @@
         <br />
         <center>
           <h3>
-            来自<span style="text-decoration: none;color: orange "><%=name%>（<%=mail%>）</span>发表评论
+            您收到了来自 <span style="text-decoration: none;color: orange "><%=name%>（<%=mail%>）</span> 的留言
           </h3>
         </center>
         <br />
         &nbsp; &nbsp;
         <p>
-          Ta在<a style="text-decoration: none;color: orange " target="_blank" href="<%=url%>"><%=siteName%></a>上发表的评论：
+          Ta在 <a style="text-decoration: none;color: orange " target="_blank" href="<%=url%>"><%=siteName%></a> 上给您留言说：
         </p>
         &nbsp; &nbsp;
         <center style=" border-bottom:#ddd 1px solid;border-left:#ddd 1px
