修改server酱发送提示语

--- a/template/custom2/send.ejs
+++ b/template/custom2/send.ejs
@@ -47,14 +47,14 @@
         <br />
         <center>
           <h3>
-            来自<span style="text-decoration: none;color: <%=main_color%> "><%=name%></span>的回复
+            来自 <span style="text-decoration: none;color: <%=main_color%> "><%=name%></span> 的回复
           </h3>
         </center>
         <br />
         &nbsp; &nbsp;
         <p>
-          您在<a style="text-decoration: none;color: <%=main_color%> " target="_blank"
-            href="<%=url%>">&nbsp;<%=siteName%>&nbsp;</a>上曾发表的评论：
+          您曾在 <a style="text-decoration: none;color: <%=main_color%> " target="_blank"
+            href="<%=url%>">&nbsp;<%=siteName%>&nbsp;</a> 上的留言：
         </p>
         &nbsp; &nbsp;
         <center>
@@ -64,7 +64,7 @@
         <p style="
         padding-bottom: 20px;
     ">
-          <span style="color: <%=main_color%>;"><%=name%></span> 给您回复啦~~~：
+          <span style="color: <%=main_color%>;"><%=name%></span> 给您回复啦~~~以下是回复内容：
         </p>
         <p>
           <center
