--- a/template/custom1/send.ejs
+++ b/template/custom1/send.ejs
@@ -30,7 +30,7 @@
       -webkit-box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.12);
       box-shadow: 0px 0px 20px 0px rgba(0, 0, 0, 0.18);">
       <header style="overflow: hidden;">
-        <img style="width:100%;z-index: 666;" src="https://ae01.alicdn.com/kf/U5bb04af32be544c4b41206d9a42fcacfd.jpg" />
+        <img style="width:100%;z-index: 666;" src="https://cdn.jsdelivr.net/gh/ghl1024/CDN/img/home.jpg" />
       </header>
       <div style="padding: 5px 20px;">
         <p style="position: relative;
@@ -54,7 +54,7 @@
         <p
           style="border-bottom:#ddd 1px solid;border-left:#ddd 1px solid;padding-bottom:20px;background-color:#eee;margin:15px 0px;padding-left:20px;padding-right:20px;border-top:#ddd 1px solid;border-right:#ddd 1px solid;padding-top:20px">
           您在<a style="text-decoration: none;color: orange " target="_blank"
-            href="<%=url%>"><%=siteName%></a>上发表的评论：
+            href="<%=url%>"><%=siteName%></a>上发表的留言：
         </p>
         &nbsp; &nbsp;
         <center>
